--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/leaflet.css" rel="stylesheet"/>
 
+
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -17,7 +18,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/leaflet.js"></script>
     <script src="lib/ng-cordova.js"></script>
-
+    <script src="lib/osmauth.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
